test/invalid/comment_slashplus_unfinished.d
//T error: comment_slashplus_unfinished.d:4:0:
//T error: Comment must end with `+/`.

/+ This is an unfinished comment
/+ With some nesting for good measure +/
